Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-50331

[Magma] Bucket got stuck in warmup state when memcached was killed on all nodes(multiple iterations of sigkill)

    XMLWordPrintable

Details

    Description

      Steps to repro:

      1. Create a 4 node cluster.
      2. Create magma bucket
      3. Load num_items=40000000,doc_size=1024. Let the load finish.
      4. Started new doc_ops=create:update:expiry
      5. Trigger bucket compaction
      6. Start killing memcahced on all nodes. Wait for bucket warmup to complete. Repeat this step in a thread with a random wait of 30-60s
      7. Observed after 5th iteration bucket got stuck in warmup state (observed for 1200 seconds)

      QE-TEST:

      guides/gradlew --refresh-dependencies testrunner -P jython=/opt/jython/bin/jython -P 'args=-i /tmp/ankush_temp_job.ini bucket_storage=magma,rerun=false,GROUP=P0;kill,randomize_value=true,doc_size=256,bucket_eviction_policy=fullEviction,replicas=1,nodes_init=4,enable_dp=false,collect_pcaps=True,get-cbcollect-info=True,autoCompactionDefined=true,upgrade_version=7.1.0-1985 -t storage.magma.magma_compaction.MagmaCompactionTests.test_crash_during_compaction,doc_size=256,upgrade_version=7.1.0-1985,graceful=False,rerun=false,GROUP=P0;kill,enable_dp=false,doc_ops=create:update:expiry,get-cbcollect-info=True,replicas=1,bucket_storage=magma,bucket_eviction_policy=fullEviction,nodes_init=4,num_items=20000000,autoCompactionDefined=true,collect_pcaps=True,randomize_value=true -m rest'
      

      Ritesh Agarwal has also logged a similar bug some time back(MB-49003), But this time we have tried on better machines(that we use for volume testing), but still we are hitting this issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ankush.sharma Ankush Sharma
            ankush.sharma Ankush Sharma
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                PagerDuty