MB-50331: Bump PopulateVBucketMap slow runtime logging

Seen occurrences as such:

2022-01-18T16:47:08.309991-08:00 WARNING (No Engine) Slow runtime for 'Warmup - populate VB Map: shard 5' on thread ReaderPool2: 18 ms
2022-01-18T16:47:08.310065-08:00 WARNING (No Engine) Slow runtime for 'Warmup - populate VB Map: shard 1' on thread ReaderPool6: 18 ms

This task has to flush num vBuckets / num shards to disk so runtime
is likely to exceed 1ms on slower machines.

Change-Id: I953801db38231332e8dcbb5bce26a78e3b9145c9
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/169009
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>